syntax = "proto3";

option go_package = "project-go/utils/grpc";

package grpc;

service GRPC {
	rpc CreateProduct (CreateProductRequest) returns (CreateProductReply) {}
	rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentReply) {}
}
  
message CreateProductRequest {
	string name = 1;
	int32 price = 2;
}

  message CreateProductReply {
	int32 ID = 1;
	string Name = 2;   
	int32 Price = 3;
	string CreatedAt  = 4;
	string UpdatedAt  = 5;
}

message CreatePaymentRequest {
	int32 ProductID = 1;
	int32 PricePaid = 2;
}

  message CreatePaymentReply {
	int32 ID = 1;
	int32 PricePaid = 2;
	int32 ProductID = 3;   
	string CreatedAt  = 4;
	string UpdatedAt  = 5;
}

